# shary

./: Cargo.toml  README.md  deny.toml  minimize.sh
src/: main.rs
src/web/: index.html
